<resources>
    <string name="app_name">TicketsApp</string>
    <string name="userET">1234</string>
    <string name="passwordET">....</string>
    <string name="enterUserBT">Ingresar</string>
    <string name="userTextView">Usuario</string>
    <string name="passwordTextView">Clave</string>
    <string name="userAccessButton">USUARIOS</string>
    <string name="ticketsAccessButton">TICKETS</string>
    <string name="rehabTechnic">REHABILITACION USUARIOS</string>
    <string name="passwords">CLAVES</string>
    <string name="idUserTextView">Id</string>
    <string name="userUserTextView">Usuario</string>
    <string name="passwordUserTextView">Clave</string>
    <string name="adminRadioButton">Administrador</string>
    <string name="employeeRadioButton">Empleado</string>
    <string name="technicRadioButton">Tecnico</string>
    <string name="fullNameUserEditText">Nombre y Apellido completos</string>
    <string name="emailUserEditText">Email example@.com</string>
    <string name="cellPhoneUserEditText">celular sin 0 y sin 15</string>
    <string name="loadUserButton">Guardar</string>
    <string name="updateUserButton">Modificar</string>
    <string name="deleteUserButton">Bloquear/Desbloquear</string>
    <string name="loadTicketButton">TICKETS</string>
    <string name="readTicketButton">Listado Tickets</string>
    <string name="ticketTitleET">Titulo del Ticket</string>
    <string name="ticketDescriptionET">Descripcion del Ticket</string>
    <string name="acceptLoadTicketButton">Cargar Ticket</string>
    <string name="updateTicketButton">Modificar</string>
    <string name="deleteTicketButton">Eliminar</string>
    <string name="resolutionScrollView">Resolucion Ticket</string>
    <string name="scroll_view_description">Resolucion. Desplazate para ver más contenido disponible.</string>
    <string name="confirmTicketButton">Confirmar</string>
    <string name="rejectTicketButton">Rechazar</string>
    <string name="editTextMLResolution">Resolucion. Desplazate para ver más contenido disponible.</string>
    <string name="readTechnicButton">Tickets</string>
    <string name="titleScrollView">Titulo. Desplázate para ver más contenido disponible.</string>
    <string name="descriptionScrollView">Descripcion. Desplazate para ver más contenido disponible.</string>
    <string name="attendedTicketButton">Atender</string>
    <string name="resolvedTicketButton">Resolver</string>
    <string name="reopenTicketButton">Reabrir</string>
    <string name="editResolutionTicket">Editar</string>
    <string name="returnResolution">Resuelto</string>
    <string name="reasignTicketButton">Reasignar</string>
    <string name="userText">Usuario</string>
    <string name="newPasswordText">Nueva clave</string>
    <string name="saveNewPasswordButton">Guardar</string>
    <string name="forgotPasswordButton">Olvidé mi contraseña</string>
    <string name="emailText">email</string>
    <string name="notAttendedRadioButton">No Atendidos</string>
    <string name="attendedRadioButton">Atendidos</string>
    <string name="resolvedRadioButton">Resueltos</string>
    <string name="finalizedRadioButton">Finalizados</string>
    <string name="reopenedRadioButton">Reabiertos</string>
    <string name="reasignedRadioButton">Reasignados</string>
</resources>
