<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminTickets">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reopenedTicketsView"
        android:layout_width="339dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <Button
        android:id="@+id/reasignTicketButton"
        android:layout_width="142dp"
        android:layout_height="65dp"
        android:text="@string/reasignTicketButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <RadioGroup
        android:id="@+id/radioGroupTickets"
        android:layout_width="204dp"
        android:layout_height="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <RadioButton
            android:id="@+id/notAttendedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notAttendedRadioButton" />

        <RadioButton
            android:id="@+id/attendedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendedRadioButton" />

        <RadioButton
            android:id="@+id/resolvedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolvedRadioButton" />

        <RadioButton
            android:id="@+id/finalizedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalizedRadioButton" />

        <RadioButton
            android:id="@+id/reopenedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reopenedRadioButton" />

        <RadioButton
            android:id="@+id/reasignedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reasignedRadioButton" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>