<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="@string/enterUserBT"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userET"
        android:layout_width="228dp"
        android:layout_height="67dp"
        android:autofillHints="User"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/userET"
        android:text="@string/userET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/enterUserBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@string/enterUserBT"
        android:text="@string/enterUserBT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="228dp"
        android:layout_height="67dp"
        android:autofillHints="Password"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@+id/passwordET"
        android:text="@string/passwordET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:text="@string/userTextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:text="@string/passwordTextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="138dp"
        android:layout_height="64dp"
        android:text="@string/forgotPasswordButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/emailText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />
</androidx.constraintlayout.widget.ConstraintLayout>